# audioop

./: .gitignore  MANIFEST.in  README.md  audioop.c  pyproject.toml  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yaml
.github/workflows/: build-ci.yaml
audioop/: __init__.pyi  _audioop.c  _audioop.c.h
clinic/: audioop.c.h
docs/: audioop.rst
tests/: test_audioop.py
