[metadata]
name = audioop-lts
version = 1.0.0
url = https://github.com/AbstractUmbra/audioop
  GitHub: repo = https://github.com/AbstractUmbra/audioop
description = LTS Port of Python audioop
maintainer = AbstractUmbra <umbra@abstractumbra.dev>
maintainer_email = umbra@abstractumbra.dev
classifiers =
  Programming Language :: Python :: 3.13

[options]
python_requires = >=3.13
packages = find:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#setting-the-zip-safe-flag
zip_safe = False
include_package_data = True

[options.exclude_package_data]
* =
    *.c
    *.h

[options.package_data]
# Ref:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#options
# (see notes for the asterisk/`*` meaning)
* =
    *.so

[easy_install]
zip_ok = false
